# EmojiDescription.macos

./: CHANGELOG.md  CMakeLists.txt  README.md
resources/: README.windows.md
src/: EmojiDescription.mm
